<resources>
    <string name="app_name" translatable="false"> EAZI SHOP</string>
    <string name="facebook_app_id" translatable="false"> YOUR_FACEBOOK_APP_ID </string>
    <string name="fb_login_protocol_scheme" translatable="false"> YOUR_FACEBOOK_LOGIN_PROTOCOL_SCHEME </string>
    <string name="google_api_app_id" translatable="false"> YOUR_GOOGLE_API_KEY </string>
    <string name="client_id" translatable="false"> GOOGLE_LOGIN_CLIENT_ID </string>
    <string name="place_picker_id" translatable="false"> GOOGLE_PLACE_PICKER_KEY </string>
    <string name="instamojo_file_url" translatable="false"> YOUR_INSTALMOJO_FILE_URL </string>
    <string name="razor_api_key" translatable="false"> YOUR_RAZORPAY_API_KEY </string>
    <string name="actionSearch"> Chercher </string>
    <string name="actionLanguage"> Langue </string>
    <string name="actionHome"> Accueil  </string>
    <string name="actionCategory"> CATÉGORIE </string>
    <string name="actionCategories"> CATÉGORIES </string>
    <string name="actionShop"> Magasin </string>
    <string name="actionCart"> MON PANIER </string>
    <string name="actionOrders"> MES COMMANDES </string>
    <string name="actionAccount"> MON COMPTE </string>
    <string name="actionAddresses"> MES ADRESSES </string>
    <string name="actionFavourites"> MES FAVORIS </string>
    <string name="actionSettings"> PARAMÈTRES </string>
    <string name="actionNews"> Nouvelles </string>
    <string name="actionBooking">  </string>
    <string name="actionWhatsApp">Customer Support</string>
    <string name="actionIntro"> INTRO </string>
    <string name="actionAbout"> À PROPOS DE NOUS </string>
    <string name="actionContactUs">NOUS CONTACTER </string>
    <string name="actionShareApp">PARTAGER L\'APPLICATION </string>
    <string name="actionRateApp">PARTAGER L\'APPLICATION </string>
    <string name="actionPartner"> Partenaire </string>
    <string name="actionLogin"> S\'IDENTIFIER </string>
    <string name="actionLogout"> SE DÉCONNECTER </string>
    <string name="homeStyle1"> Accueil  1 </string>
    <string name="homeStyle2"> Accueil 2 </string>
    <string name="homeStyle3"> Accueil 3 </string>
    <string name="homeStyle4"> Accueil 4 </string>
    <string name="homeStyle5"> Accueil 5 </string>
    <string name="homeStyle6"> Accueil 6 </string>
    <string name="categoryStyle1"> CATÉGORIE 1 </string>
    <string name="categoryStyle2"> CATÉGORIE 2 </string>
    <string name="categoryStyle3"> CATÉGORIE 3 </string>
    <string name="categoryStyle4"> CATÉGORIE 4 </string>
    <string name="categoryStyle5"> CATÉGORIE 5 </string>
    <string name="categoryStyle6"> CATÉGORIE 6 </string>
    <string name="Newest"> NOUVEAU </string>
    <string name="topSeller">MEILLEUR VENDEUR </string>
    <string name="superDeals"> SUPER AFFAIRES </string>
    <string name="mostLiked"> LE PLUS AIMÉ </string>
    <string name="currency"> Devise</string>
    <string name="all"> Tout </string>
    <string name="newest"> Le plus récent </string>
    <string name="top_seller"> Meilleur vendeur </string>
    <string name="super_deals"> Offres </string>
    <string name="most_liked"> Le plus aimé </string>
    <string name="recentlyViewed"> vu récemment </string>
    <string name="news_all"> Toutes les nouvelles </string>
    <string name="news_categories"> Catégories d\'actualités </string>
    <string name="news_description"> Description des nouvelles </string>
    <string name="ok"> OK </string>
    <string name="and"> and </string>
    <string name="NEW"> NEW </string>
    <string name="OFF"> OFF </string>
    <string name="save"> Save </string>
    <string name="send"> Send </string>
    <string name="next"> Next </string>
    <string name="skip"> Skip </string>
    <string name="grant"> Grant </string>
    <string name="title"> Title </string>
    <string name="start"> Start </string>
    <string name="retry"> Retry </string>
    <string name="apply"> Apply </string>
    <string name="search"> Search </string>
    <string name="clear"> Clear </string>
    <string name="login"> Login </string>
    <string name="signup"> Crée un compte </string>
    <string name="cancel"> Cancel </string>
    <string name="welcome"> Welcome </string>
    <string name="explore"> Explore </string>
    <string name="checkoutFinal"> Checkout </string>
    <string name="register"> Register </string>
    <string name="drawerOpen"> DrawerOpen </string>
    <string name="drawerClose"> DrawerClose </string>
    <string name="getdelivery_slot"> Please select at-least one delivery slot</string>
    <string name="view"> View </string>
    <string name="date"> Date </string>
    <string name="cart"> Cart </string>
    <string name="product"> Product </string>
    <string name="products"> Products </string>
    <string name="category"> Category </string>
    <string name="categories"> Categories </string>
    <string name="final_price"> Final Price </string>
    <string name="total_price"> Total Price </string>
    <string name="product_price"> Product Price </string>
    <string name="checkout_price"> Checkout Price </string>
    <string name="product_title"> Product Title </string>
    <string name="view_product"> View Product </string>
    <string name="quantity"> Quantity </string>
    <string name="description"> Description </string>
    <string name="attributes"> Attributes </string>
    <string name="attribute_name"> Attribute Name </string>
    <string name="product_description"> Product Description </string>
    <string name="likes"> Likes </string>
    <string name="google_login"> Connexion Google </string>
    <string name="facebook_login"> Identifiant Facebook </string>
    <string name="in_stock"> In Stock </string>
    <string name="outOfStock"> Out of Stock </string>
    <string name="addToCart"> Add to Cart </string>
    <string name="removeProduct"> Remove Product </string>
    <string name="removeFromCart"> Remove from Cart </string>
    <string name="save_address"> Save Address </string>
    <string name="save_changes"> Save Changes </string>
    <string name="reset_filters"> Reset Filters </string>
    <string name="order_now"> Order Now </string>
    <string name="continue_shopping"> Continue Shopping </string>
    <string name="proceed_checkout"> Proceed Checkout </string>
    <string name="order"> Order </string>
    <string name="order_id"> Order ID </string>
    <string name="order_status"> Order Status </string>
    <string name="order_date"> Order Date </string>
    <string name="order_address"> Order Address </string>
    <string name="order_details"> Order Details </string>
    <string name="order_confirmed"> Order Confirmed </string>
    <string name="order_notes"> Order Notes </string>
    <string name="order_comments"> Order Comments </string>
    <string name="no_of_products"> No. of Products </string>
    <string name="tax"> Tax </string>
    <string name="shipping"> Shipping </string>
    <string name="discount"> Discount </string>
    <string name="subtotal"> Subtotal </string>
    <string name="total"> Total </string>
    <string name="coupon"> Coupon </string>
    <string name="coupon_code"> Coupon Code </string>
    <string name="coupon_amount"> Coupon Amount </string>
    <string name="coupon_discount"> Coupon Discount </string>
    <string name="coupon_type"> Coupon Type </string>
    <string name="sample_coupons"> Sample Coupon Codes </string>
    <string name="payment_method"> Payment Method </string>
    <string name="payment_details"> Payment Details </string>
    <string name="card_number"> Card Number </string>
    <string name="expiry_month"> Expiry Month </string>
    <string name="expiry_year"> Expiry Year </string>
    <string name="card_expiry"> Card Expiry </string>
    <string name="card_cvv"> Card CVV </string>
    <string name="payPal"> PayPal </string>
    <string name="billing_address"> Billing Address </string>
    <string name="shipping_address"> Shipping Address </string>
    <string name="shipping_method"> Shipping Method </string>
    <string name="full_name"> Full Name </string>
    <string name="first_name"> First Name </string>
    <string name="last_name"> Last Name </string>
    <string name="email"> Email </string>
    <string name="email_address">Address Email  </string>
    <string name="dob"> Date of Birth </string>
    <string name="gender"> Gender </string>
    <string name="male"> Male </string>
    <string name="female"> Female </string>
    <string name="fax"> Fax </string>
    <string name="mobile"> Mobile </string>
    <string name="contact_no"> Contact No </string>
    <string name="location">Location</string>
    <string name="address"> Address </string>
    <string name="country"> Country </string>
    <string name="zone"> Zone </string>
    <string name="state"> State </string>
    <string name="city"> City </string>
    <string name="post_code"> Post Code </string>
    <string name="suburb"> Suburb </string>
    <string name="password"> Mots De passe  </string>
    <string name="confirm_password"> Confirm Password </string>
    <string name="new_password"> New Password </string>
    <string name="current_password"> Current Password </string>
    <string name="new_address"> New Address </string>
    <string name="update_address"> Update Address </string>
    <string name="edit_profile"> Edit Profile </string>
    <string name="subscribe_newsletter"> Subscribe Newsletter </string>
    <string name="thank_you"> Thank You </string>
    <string name="add_coupon"> Add Coupon? </string>
    <string name="your_message"> Your Message </string>
    <string name="empty_cart"> Your Cart is Empty </string>
    <string name="record_not_found"> No Record Found </string>
    <string name="item_added_to_cart"> Item Added to Cart </string>
    <string name="item_removed_from_cart"> Removed from Cart </string>
    <string name="something_went_wrong"> Something went Wrong! </string>
    <string name="added_to_favourites"> Added to Favourites </string>
    <string name="removed_from_favourites"> Removed from Favourites </string>
    <string name="not_a_member">Pas un membre?</string>
    <string name="login_or_signup"> Login &amp; Register </string>
    <string name="login_or_create_account"> Please Login or create Account </string>
    <string name="thank_you_for_shopping"> Thank You for shopping with us! </string>
    <string name="coupon_removes_other_coupons"> This coupon may remove all other coupons! </string>
    <string name="forgot_your_password"> Forgot Your Password? </string>
    <string name="forgot_password"> J\'ai oublié mon mot de passe? </string>
    <string name="already_have_account">Vous avez déjà un compte? </string>
    <string name="search_product_by_name"> Type Something to Search </string>
    <string name="default_shipping"> Default Shipping Address </string>
    <string name="select_payment_method"> Select Payment Method </string>
    <string name="order_dialog_prompt"> Do you really want to cancel the order? </string>
    <string name="processing"> Processing... </string>
    <string name="please_wait"> Please Wait... </string>
    <string name="invalid_address"> Invalid Address </string>
    <string name="no_internet"> Internet Connection is not Available </string>
    <string name="permission_rejected"> Permission not Granted! </string>
    <string name="permission_camera_storage"> Need Camera and Storage Permissions! </string>
    <string name="permission_camera_storage_needed"> This app needs camera and storage permissions to take pictures from the gallery or with the camera. </string>
    <string name="rate_now"> Rate It! </string>
    <string name="not_now"> Not Now </string>
    <string name="rate_app_msg"> If you enjoy using this app, it would be great to take a moment to rate it. </string>
    <string name="veryfynumbertxt"> Please enter verification code sent in your text message. </string>
    <string name="delivery_time">Put time and date when you want this delivery</string>
</resources>